--- a/index.html
+++ b/index.html
@@ -37,7 +37,218 @@
 
             </div>
         </section>
+        <section class="mid-section">
+            <div class="menu">
+                <span><button class="menu-bar"><a href="">Upcoming Matches</a></button></span>
+                <span><button class="menu-bar"><a href="">All Group</a></button></span>
+                <span><button class="menu-bar" id="colorful"><a href="">Blog</a></button></span>
+
+            </div>
+            <div class="menu-features">
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="box">
+                        <div class="box-photo">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h3 class="heading">Transfer</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="box-info">
+                                <div class="duration">
+                                    <img class="time" src="assets/Time Icon.png" alt="">
+                                    <span> 10h</span>
+                                </div>
+                                <div class="comment">
+                                    <img class="chat" src="assets/Chat Icon.png" alt="">
+                                    <span> 23</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+
+    </footer>
 
 
 </body>
