website design done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Fifa World Cup 2022</title>
     <!-- stylesheet  -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- font-awesome  -->
+    <script src="https://kit.fontawesome.com/7f51b0e260.js" crossorigin="anonymous"></script>
     <!-- google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -247,7 +249,22 @@
         </section>
     </main>
     <footer>
-
+        <h1>Goal</h1>
+        <hr>
+        <div class="footer-feature">
+            <a href="">Contact Us</a>
+            <a href="">Terms of Service</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Privacy Setting</a>
+            <a href="">Goal App</a>
+            <a href="">Goal Live</a>
+        </div>
+        <div class="social-media">
+            <p>Follow us on : </p>
+            <a href="https://www.facebook.com/miskatur.rohman/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/miskatur-rahman-99b8951b8/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Miskatur"> <i class="fa-brands fa-github"></i></a>
+        </div>
     </footer>
 
 
