--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
 
             </div>
         </section>
+        <!--------------------------------
+                  Mid Section 
+        ---------------------------------->
         <section class="mid-section">
             <div class="menu">
-                <span><button class="menu-bar"><a href="">Upcoming Matches</a></button></span>
+                <span><button class="menu-bar"><a href="upcoming-game.html">Upcoming
+                            Matches</a></button></span>
                 <span><button class="menu-bar"><a href="">All Group</a></button></span>
-                <span><button class="menu-bar" id="colorful"><a href="">Blog</a></button></span>
+                <span><button class="menu-bar colorful"><a href="index.html">Blog</a></button></span>
 
             </div>
             <div class="menu-features">
@@ -69,6 +73,9 @@
 
                     </div>
                 </div>
+                <!------------------------------
+                          feature  
+                ---------------------------------->
                 <div class="feature">
                     <div class="box">
                         <div class="box-photo">
@@ -201,6 +208,7 @@
 
                     </div>
                 </div>
+
                 <div class="feature">
                     <div class="box">
                         <div class="box-photo">
@@ -245,9 +253,18 @@
 
                     </div>
                 </div>
+
             </div>
+
         </section>
+        <div class="see-more">
+            <a href="">See More</a>
+
+        </div>
     </main>
+    <!------------------------------
+           Footer Section  
+    -------------------------------->
     <footer>
         <h1>Goal</h1>
         <hr>
