--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Fifa World Cup 2022</title>
     <!-- stylesheet  -->
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/upcoming-game.css">
     <!-- font-awesome  -->
     <script src="https://kit.fontawesome.com/7f51b0e260.js" crossorigin="anonymous"></script>
     <!-- google Fonts -->
