mobile responsive done

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
                     This time Football will meet the incridible
                     atmosphere and hospitality of Arabs. Its not just a Game, its more than a passion.
                 </p>
-                <button class="link-btn">
-                    <a href="#">Watch Live</a>
-                    <!-- <img src="assets/arrow-right-long-solid.svg" alt=""> -->
-                    <a href="#"><img src="assets/video.svg" alt=""></a></button>
+                <span>
+                    <button class="link-btn">
+                        <a href="#">Watch Live</a>
+                        <!-- <img src="assets/arrow-right-long-solid.svg" alt=""> -->
+                        <a href="#"><img src="assets/video.svg" alt=""></a></button>
+                </span>
 
             </div>
             <div class="top-banner-image">
@@ -257,11 +259,13 @@
 
             </div>
 
+
         </section>
         <div class="see-more">
-            <a href="">See More</a>
+            <a href="#">See More</a>
 
         </div>
+
     </main>
     <!------------------------------
            Footer Section  
