--- a/upcoming-game.html
+++ b/upcoming-game.html
@@ -143,7 +143,7 @@
 
         </section>
         <div class="see-more">
-            <a href="">See More</a>
+            <a href="#">See More</a>
 
         </div>
     </main>
